# crispy-strings

./: Cargo.toml  README.md
src/: unsync.rs
src/sync/: error.rs  interning.rs  trie.rs
src/unsync/: error.rs  interning.rs  trie.rs
