[package]
name = "str-interning"
version = "0.1.0"
edition = "2021"
authors = ["Will Young <wil.wyo@gmail.com>"]

[dependencies]
log = "0.4.22"
once_cell = "1.19.0"
parking_lot = "0.12.3"
thiserror = "1.0.61"
unicode-xid = "0.2.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
